--- a/src/heroes.html
+++ b/src/heroes.html
@@ -63,16 +63,14 @@
             </header>
 
             <main class="grid-in-main">
-
                 <div class="container grid grid-cols-4 p-14 gap-6 ml-16">
-
                     <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                         <a href="#">
                             <img class="rounded-t-lg" src="assets/axe.jpg" alt="" />
                         </a>
                         <div class="p-5">
                             <a href="#">
-                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Axe</h5>
+                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"></h5>
                             </a>
                             <h6 class=" font-semibold text-white">Attack Type:</h6>
                             <p class="mb-3 font-poppins text-gray-700 ml-14 dark:text-gray-400">Melee</p>
@@ -82,13 +80,9 @@
                             </a>
                         </div>
                     </div>
-
-        
-
-
-
                 </div>
             </main>
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
