Responsive view Heroes Page

--- a/src/heroes.html
+++ b/src/heroes.html
@@ -11,7 +11,7 @@
         <title>Heroes</title>
     </head>
     <body
-        class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
+        class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover "
     >
         <div
             class="grid grid-areas-layout grid-cols-layout grid-rows-layout h-screen"
@@ -63,24 +63,28 @@
             </header>
 
             <main class="grid-in-main">
-                <div class="container grid grid-cols-4 p-14 gap-6 ml-16">
-                    <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                        <a href="#">
-                            <img class="rounded-t-lg" src="assets/axe.jpg" alt="" />
-                        </a>
-                        <div class="p-5">
+                <div id="card" class="grid grid-cols-2 p-14 gap-3 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-6 lg:ml-16 ns:flex ns:flex-col ns:justify-center ns:items-center">
+                    <!-- <div class="grid grid-cols-4 p-14 gap-6 ml-16">
+                        <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                             <a href="#">
-                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"></h5>
+                                <img class="rounded-t-lg" src="https://api.opendota.com/apps/dota2/images/dota_react/heroes/antimage.png?" alt="" />
                             </a>
-                            <h6 class=" font-semibold text-white">Attack Type:</h6>
-                            <p class="mb-3 font-poppins text-gray-700 ml-14 dark:text-gray-400">Melee</p>
-                            <a href="#" class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                                Read more
-                                <svg aria-hidden="true" class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                            </a>
+                            <div class="p-5">
+                                <a href="#">
+                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"></h5>
+                                </a>
+                                <h6 class=" font-semibold text-white">Attack Type:</h6>
+                                <p class="mb-3 font-poppins text-gray-700 ml-14 dark:text-gray-400">Melee</p>
+                                <a href="#" class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                    Read more
+                                    <svg aria-hidden="true" class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                                </a>
+                            </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
+                
+
             </main>
         </div>
         <script src="main.js"></script>
