Responsive Heroes Page

--- a/src/heroes.html
+++ b/src/heroes.html
@@ -11,10 +11,10 @@
         <title>Heroes</title>
     </head>
     <body
-        class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover "
+    class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
     >
         <div
-            class="grid grid-areas-layout grid-cols-layout grid-rows-layout h-screen"
+            class="grid grid-areas-layout grid-cols-layout grid-rows-layout"
         >
             <header class="grid-in-header font-semibold text-lg">
                 <div class="flex justify-between items-center mt-3.5">
@@ -63,7 +63,7 @@
             </header>
 
             <main class="grid-in-main">
-                <div id="card" class="grid grid-cols-2 p-14 gap-3 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-6 lg:ml-16 ns:flex ns:flex-col ns:justify-center ns:items-center">
+                <div id="card" class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-16 ns:p-14 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center overflow-y-auto h-screen scrollbar-hide">
                     <!-- <div class="grid grid-cols-4 p-14 gap-6 ml-16">
                         <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                             <a href="#">
