Responsive Heroes Page

--- a/src/heroes.html
+++ b/src/heroes.html
@@ -62,8 +62,8 @@
                 </div>
             </header>
 
-            <main class="grid-in-main">
-                <div id="card" class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-16 ns:p-14 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center overflow-y-auto h-screen scrollbar-hide">
+            <main class="grid-in-main mt-5">
+                <div id="card" class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center ns:mr-6 ns:mt-2 overflow-y-auto h-screen scrollbar-hide">
                     <!-- <div class="grid grid-cols-4 p-14 gap-6 ml-16">
                         <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                             <a href="#">
