Adding Hero Info page

--- a/src/hero-info.html
+++ b/src/hero-info.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         />
-        <title>Heroes</title>
+        <title>Hero Information</title>
     </head>
     <body
     class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
@@ -63,7 +63,7 @@
             </header>
 
             <main class="grid-in-main mt-5">
-                <div id="card" class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center ns:mr-6 ns:mt-2 overflow-y-auto h-screen scrollbar-hide">
+                <div id="info-card" class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center ns:mr-6 ns:mt-2 overflow-y-auto h-screen scrollbar-hide">
                     <!-- <div class="grid grid-cols-4 p-14 gap-6 ml-16">
                         <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                             <a href="#">
@@ -83,10 +83,9 @@
                         </div>
                     </div> -->
                 </div>
-                
 
             </main>
         </div>
-        <script src="main.js"></script>
+        <script src="hero-info.js"></script>
     </body>
 </html>
