Hero Info page complete

--- a/src/hero-info.html
+++ b/src/hero-info.html
@@ -62,29 +62,61 @@
                 </div>
             </header>
 
-            <main class="grid-in-main mt-5">
-                <div id="info-card" class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center ns:mr-6 ns:mt-2 overflow-y-auto h-screen scrollbar-hide">
-                    <!-- <div class="grid grid-cols-4 p-14 gap-6 ml-16">
-                        <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                            <a href="#">
-                                <img class="rounded-t-lg" src="https://api.opendota.com/apps/dota2/images/dota_react/heroes/antimage.png?" alt="" />
-                            </a>
-                            <div class="p-5">
+            <main class="grid-in-main mt-9">
+
+                        <div id="info-card" class="flex h-ch ml-80 mr-80 justify-center   bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700 mb-5">
+                            <!-- <div class="image  justify-start w-image ">
                                 <a href="#">
-                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"></h5>
-                                </a>
-                                <h6 class=" font-semibold text-white">Attack Type:</h6>
-                                <p class="mb-3 font-poppins text-gray-700 ml-14 dark:text-gray-400">Melee</p>
-                                <a href="#" class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                                    Read more
-                                    <svg aria-hidden="true" class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                                    <img class="rounded-t-lg w-full h-full" src="https://api.opendota.com/apps/dota2/images/dota_react/heroes/antimage.png?" alt="" />
                                 </a>
                             </div>
-                        </div>
-                    </div> -->
-                </div>
 
+                            <div class="p-5  w-image">
+                                <a href="#" class="flex gap-2">
+                                    <h5 class="mb-5 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Test</h5>
+                                    <img class="h-8" src="https://api.opendota.com/apps/dota2/images/dota_react/heroes/icons/antimage.png?" alt="">
+                                </a>
+                                    <div class="flex mt-3">
+                                        <h6 class=" font-semibold text-white">Primary attribute </h6>
+                                        <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">Agi</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Attack Type:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">Melee</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Roles:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">Carry, Escape, Nuker</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Base Health:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">200</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Base Health Regen:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">0.25</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Base Mana:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">75</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Base Mana regen:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">0</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Base armor:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">0</p>
+                                        </div>
+                                        <div class="flex mt-3">
+                                            <h6 class=" font-semibold text-white">Base magic resistance:</h6>
+                                            <p class="mb-3 font-poppins text-gray-700 ml-2 dark:text-gray-400">26</p>
+                                        </div>
+                                </div>
+                            </div> -->
+                        </div>
             </main>
+
         </div>
         <script src="hero-info.js"></script>
     </body>
