Responsive Hero Info page

--- a/src/hero-info.html
+++ b/src/hero-info.html
@@ -63,8 +63,8 @@
             </header>
 
             <main class="grid-in-main mt-9">
-
-                        <div id="info-card" class="flex h-ch ml-80 mr-80 justify-center   bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700 mb-5">
+                        <div class="flex justify-center overflow-y-auto h-screen scrollbar-hide">
+                        <div id="info-card" class="ns:max-w-sm flex h-ch  justify-center w-infocard cardInfo:flex-col cardInfo:h-hc cardInfo:w-infocardmdscreen bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700 mb-5">
                             <!-- <div class="image  justify-start w-image ">
                                 <a href="#">
                                     <img class="rounded-t-lg w-full h-full" src="https://api.opendota.com/apps/dota2/images/dota_react/heroes/antimage.png?" alt="" />
@@ -115,6 +115,7 @@
                                 </div>
                             </div> -->
                         </div>
+                    </div>
             </main>
 
         </div>
