--- a/src/heroes.html
+++ b/src/heroes.html
@@ -2,8 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="/public/output.css" rel="stylesheet" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <link
+            href="/public/output.css"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
@@ -11,11 +17,9 @@
         <title>Heroes</title>
     </head>
     <body
-    class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
+        class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
     >
-        <div
-            class="grid grid-areas-layout grid-cols-layout grid-rows-layout"
-        >
+        <div class="grid grid-areas-layout grid-cols-layout grid-rows-layout">
             <header class="grid-in-header font-semibold text-lg">
                 <div class="flex justify-between items-center mt-3.5">
                     <div
@@ -44,12 +48,16 @@
                             >
                         </li>
                         <li>
-                            <a href="heroes.html"  class="text-slate-300 hover:text-white underline underline-offset-8 decoration-2 decoration-orange-500""
+                            <a
+                                href="heroes.html"
+                                class="text-slate-300 hover:text-white underline underline-offset-8 decoration-2 decoration-orange-500"
                                 >Heroes</a
                             >
                         </li>
                         <li>
-                            <a href="#" class="text-slate-300 hover:text-white"
+                            <a
+                                href="about-me.html"
+                                class="text-slate-300 hover:text-white"
                                 >About Me</a
                             >
                         </li>
@@ -63,7 +71,10 @@
             </header>
 
             <main class="grid-in-main mt-5">
-                <div id="card" class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center ns:mr-6 ns:mt-2 overflow-y-auto h-screen scrollbar-hide">
+                <div
+                    id="card"
+                    class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center ns:mr-6 ns:mt-2 overflow-y-auto h-screen scrollbar-hide"
+                >
                     <!-- <div class="grid grid-cols-4 p-14 gap-6 ml-16">
                         <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                             <a href="#">
@@ -83,8 +94,6 @@
                         </div>
                     </div> -->
                 </div>
-                
-
             </main>
         </div>
         <script src="main.js"></script>
