--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="/public/output.css" rel="stylesheet" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <link
+            href="/public/output.css"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
@@ -51,7 +57,9 @@
                             >
                         </li>
                         <li>
-                            <a href="#" class="text-slate-300 hover:text-white"
+                            <a
+                                href="about-me.html"
+                                class="text-slate-300 hover:text-white"
                                 >About Me</a
                             >
                         </li>
