--- a/src/about-me.html
+++ b/src/about-me.html
@@ -14,6 +14,11 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         />
+        <link
+            rel="icon"
+            href="assets/dota2_93574.svg"
+        />
+
         <title>About Me</title>
     </head>
     <body
