--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         />
+        <link
+            rel="icon"
+            href="assets/dota2_93574.svg"
+        />
         <title>Landing-Page</title>
     </head>
     <body
